# gl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  q.sh
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: fragment.glsl  vertex.glsl
res/shaders/: block_frag.glsl  block_vert.glsl
res/shaders/light/: cube_frag.glsl  cube_vert.glsl  light_frag.glsl  light_vert.glsl
src/: camera.c  camera.h  main.c  util.c  util.h
src/block/: block.c  block.h  chunk.c  chunk.h
src/core/: terrain.h
src/gfx/: gfx.h  renderer.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h  window.c  window.h
src/util/: vec.c  vec.h
src/world/: chunk.c  chunk.h  cubemap.c  cubemap.h
